Release version v1.5.0: added new features and bug fixes